# mx-menu-editor

./: .gitignore  CMakeLists.txt  README.md  addappdialog.cpp  addappdialog.h  addappdialog.ui  build.sh  images.qrc  license.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-menu-editor  mx-menu-editor.desktop  mx-menu-editor.pro  mx-menu-editor_0.15.5mx14.dsc  mx-menu-editor_0.15.5mx14_i386.changes  mx-menu-editor_0.15.5mx14_i386.deb  mx-menu-editor_15.10.1mx15.dsc  mx-menu-editor_15.10.1mx15_i386.changes  mx-menu-editor_15.10.1mx15_i386.deb  mx-menu-editor_15.10mx15.dsc  mx-menu-editor_15.10mx15.tar.xz  mx-menu-editor_15.10mx15_i386.changes  mx-menu-editor_15.10mx15_i386.deb  mx-menu-editor_15.11.1mx15.dsc  mx-menu-editor_15.11.1mx15.tar.xz  mx-menu-editor_15.11.1mx15_amd64.changes  mx-menu-editor_15.11.1mx15_amd64.deb  mx-menu-editor_15.11.1mx15_i386.changes  mx-menu-editor_15.11.1mx15_i386.deb  mx-menu-editor_15.11mx15.dsc  mx-menu-editor_15.11mx15.tar.xz  mx-menu-editor_15.11mx15_amd64.changes  mx-menu-editor_15.11mx15_amd64.deb  mx-menu-editor_15.11mx15_i386.changes  mx-menu-editor_15.11mx15_i386.deb  mx-menu-editor_15.12mx15.dsc  mx-menu-editor_15.12mx15.tar.xz  (+189 more)
debian/: changelog  control  copyright  install  rules
debs/: mx-live-usb-maker_21.11.dsc  mx-live-usb-maker_21.11.tar.xz  mx-menu-editor_19.7.1.dsc  mx-menu-editor_19.7.1.tar.xz  mx-menu-editor_19.7.1_amd64.changes  mx-menu-editor_19.7.1_amd64.deb  mx-menu-editor_19.7.1_i386.deb  mx-menu-editor_19.7.dsc  mx-menu-editor_19.7.tar.xz  (+77 more)
tests/: CMakeLists.txt  test_desktoputils.cpp
(+164 files in other folders)
